Fix styles to remove extra content scrollbar

--- a/src/app/sandwich/components/sandwich-filtering/sandwich-filtering.component.scss
+++ b/src/app/sandwich/components/sandwich-filtering/sandwich-filtering.component.scss
@@ -8,4 +8,5 @@ form {
   flex-direction: column;
   padding-left: 2em;
   padding-right: 2em;
+  margin-bottom: 1em;
 }
